--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ allprojects {
 }
 
 subprojects {
-    apply plugin: 'groovy'
+    apply plugin: 'java'
 
 
     repositories {
@@ -22,6 +22,13 @@ subprojects {
 
     test {
         testReport = false
+
+        afterTest { descriptor, result ->
+            if (result.resultType.equals(TestResult.ResultType.FAILURE)) {
+                println descriptor
+                result.exception.printStackTrace(System.out)
+            }
+        }
     }
 
     task myInfo {
@@ -30,4 +37,6 @@ subprojects {
         }
     }
 }
+
+
 
