--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,13 @@ allprojects {
     version = "1.0"
 }
 
+ideaProject {
+    javaVersion = 1.6
+    withXml { provider ->
+        provider.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping.@vcs = 'git'
+    }
+}
+
 subprojects {
     apply plugin: 'java'
 
