--- a/dumpling-core/build.gradle
+++ b/dumpling-core/build.gradle
@@ -1,46 +1,10 @@
-configurations {
-    integrationTestCompile {
-        extendsFrom testCompile
-    }
-    integrationTestRuntime {
-        extendsFrom integrationTestCompile, testRuntime
-    }
-}
-
-
-
 dependencies {
-    compile project(':dumpling-util'), 'commons-collections:commons-collections:2.0'
-    // integrationTestCompile ... any dependencies needed for integration tests..
-}
-
-
-sourceSets {
-    integrationTest {
-        java.srcDir file('src/integration-test/java')
-        resources.srcDir file('src/integration-test/resources')
-        compileClasspath = sourceSets.main.classes + sourceSets.test.classes + configurations.integrationTestCompile
-        runtimeClasspath = classes + compileClasspath + configurations.integrationTestRuntime
-    }
-}
-
-task integrationTest(type: Test, dependsOn: jar) {
-    testClassesDir = sourceSets.integrationTest.classesDir
-    classpath = sourceSets.integrationTest.runtimeClasspath
-    systemProperties['jar.path'] = jar.archivePath
-}
-
-def doIntegrationTest = hasProperty('intTest') ? intTest : false
-if (doIntegrationTest) {
-    build.dependsOn integrationTest
+    compile project(':dumpling-util')
 }
 
 
 
 
-test {
-    //maxParallelForks = 2
-}
 
 task taskA {
     def outputFile = new File("$buildDir/jalla.txt")
