--- a/dumpling-core/pom.xml
+++ b/dumpling-core/pom.xml
@@ -3,19 +3,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dumpling</groupId>
     <artifactId>dumpling-core</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Dumplingapp Core</name>
     <parent>
         <artifactId>dumpling</artifactId>
         <groupId>com.dumpling</groupId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <dependencies>
         <dependency>
             <groupId>com.dumpling</groupId>
             <artifactId>dumpling-util</artifactId>
-            <version>1.0</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
