--- a/dumpling-webapp/pom.xml
+++ b/dumpling-webapp/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dumpling</groupId>
     <artifactId>dumpling-webapp</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Dumplingapp Tapestry 5 Application</name>
     <parent>
         <artifactId>dumpling</artifactId>
         <groupId>com.dumpling</groupId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <dependencies>
         <dependency>
