--- a/dumpling-webapp/pom.xml
+++ b/dumpling-webapp/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.dumpling</groupId>
             <artifactId>dumpling-core</artifactId>
-            <version>1.0</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
